--- a/frontend/src/app/panel/panel.component.html
+++ b/frontend/src/app/panel/panel.component.html
@@ -39,7 +39,7 @@
 
   </div>
   <section class="image-container" [@slideInOut] *ngIf="state.resultReady">
-    <img width="256" height="256" src="https://media.istockphoto.com/photos/businessman-silhouette-as-avatar-or-default-profile-picture-picture-id476085198?k=6&m=476085198&s=612x612&w=0&h=5cDQxXHFzgyz8qYeBQu2gCZq1_TN0z40e_8ayzne0X0=">
+    <img width="256" height="256" src="img.jpg">
   </section>
   <div style="width:50vw;padding-top:50px;" [@slideInOut2] *ngIf="state.resultReady">
   <button type="button" class="btn" (click)="reset()">Reset!</button>
